// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TextArea matches the snapshot 1`] = `
<DocumentFragment>
  .c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  min-height: 6.5rem;
  min-width: 100%;
  outline: none;
  overflow: auto;
  resize: vertical;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c3:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<div
    class="c0"
    data-testid="container"
  >
    <label
      class="c1 c2"
      for="uuid1"
      id="uuid1_label"
    >
      Comment (required)
    </label>
    <textarea
      class="c3"
      data-testid="some-data-testid"
      id="uuid1"
      placeholder="Enter your comment"
      required=""
    >
      foo
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`TextArea matches the snapshot when disabled 1`] = `
<DocumentFragment>
  .c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  min-height: 6.5rem;
  min-width: 100%;
  outline: none;
  overflow: auto;
  resize: vertical;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c3:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<div
    class="c0"
    data-testid="container"
  >
    <label
      class="c1 c2"
      for="uuid1"
      id="uuid1_label"
    >
      Comment (required)
    </label>
    <textarea
      class="c3"
      data-testid="textarea"
      disabled=""
      id="uuid1"
      placeholder="Enter your comment"
      required=""
    >
      foo
    </textarea>
  </div>
</DocumentFragment>
`;
